// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It should render the comment item component 1`] = `
<Fragment>
  <div
    className="comment-item-section"
  >
    <div
      className="row"
    >
      <div
        className="col-xs-3"
      >
        <img
          alt=""
          className="image"
          src="goal.com/en-gb"
        />
      </div>
      <div
        className="col-xs-5 ml-3"
      >
        <p
          className="text-center"
        >
          <b>
            Omenkish
          </b>
        </p>
      </div>
      <div
        className="col-xs-4"
      >
        <i
          className="far fa-clock 2x"
        >
           
        </i>
        <span
          className="comment-time"
        >
             
          49 years ago
        </span>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-md-11 pl-10"
      >
        <p
          className="comment-body"
        >
          We are africans
        </p>
      </div>
      <ForwardRef(ContextTransform)>
        <ForwardRef(Bootstrap(DropdownToggle))>
          ⋮
        </ForwardRef(Bootstrap(DropdownToggle))>
        <ForwardRef(Bootstrap(DropdownMenu))
          className="dropdown-menu"
        >
          <ForwardRef(ContextTransform)
            as="div"
          >
            <span>
              Edit
            </span>
          </ForwardRef(ContextTransform)>
          <ForwardRef(Bootstrap(DropdownDivider)) />
          <ForwardRef(ContextTransform)
            onClick={[Function]}
          >
            <span>
              Delete
            </span>
          </ForwardRef(ContextTransform)>
          <ForwardRef(Bootstrap(DropdownDivider)) />
          <ForwardRef(ContextTransform)>
            <span>
              Edit History
            </span>
          </ForwardRef(ContextTransform)>
        </ForwardRef(Bootstrap(DropdownMenu))>
      </ForwardRef(ContextTransform)>
    </div>
    <div
      className="row comment-reaction"
    >
      <div
        className="col-xs-6 ml-6"
      >
         
        <i
          className="far fa-thumbs-up"
        />
      </div>
      <div
        className="col-xs-6 ml-5"
      >
        <i
          className="far fa-thumbs-down"
        />
      </div>
    </div>
  </div>
  <CustomModal
    body={
      <div>
        <section
          className="comment-modal"
        >
          <h2>
             Are you sure you want to delete this comment?
          </h2>
        </section>
        <section
          className="d-flex justify-content-center mb-5"
        >
          <ForwardRef
            className="mr-4"
            onClick={[Function]}
            sm={true}
          >
            Cancel
          </ForwardRef>
          <ForwardRef
            danger={true}
            onClick={[Function]}
            sm={true}
          >
            Delete
          </ForwardRef>
        </section>
      </div>
    }
    closeModal={[Function]}
    modalIsOpen={false}
  />
</Fragment>
`;

exports[`It should render the comment item component 2`] = `
<Fragment>
  <div
    className="comment-item-section"
  >
    <div
      className="row"
    >
      <div
        className="col-xs-3"
      >
        <img
          alt=""
          className="image"
          src="goal.com/en-gb"
        />
      </div>
      <div
        className="col-xs-5 ml-3"
      >
        <p
          className="text-center"
        >
          <b>
            Omenkish
          </b>
        </p>
      </div>
      <div
        className="col-xs-4"
      >
        <i
          className="far fa-clock 2x"
        >
           
        </i>
        <span
          className="comment-time"
        >
             
          49 years ago
        </span>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-md-11 pl-10"
      >
        <p
          className="comment-body"
        >
          We are africans
        </p>
      </div>
      <ForwardRef(ContextTransform)>
        <ForwardRef(Bootstrap(DropdownToggle))>
          ⋮
        </ForwardRef(Bootstrap(DropdownToggle))>
        <ForwardRef(Bootstrap(DropdownMenu))
          className="dropdown-menu"
        >
          <ForwardRef(ContextTransform)
            as="div"
          >
            <span>
              Edit
            </span>
          </ForwardRef(ContextTransform)>
          <ForwardRef(Bootstrap(DropdownDivider)) />
          <ForwardRef(ContextTransform)
            onClick={[Function]}
          >
            <span>
              Delete
            </span>
          </ForwardRef(ContextTransform)>
          <ForwardRef(Bootstrap(DropdownDivider)) />
          <ForwardRef(ContextTransform)>
            <span>
              Edit History
            </span>
          </ForwardRef(ContextTransform)>
        </ForwardRef(Bootstrap(DropdownMenu))>
      </ForwardRef(ContextTransform)>
    </div>
    <div
      className="row comment-reaction"
    >
      <div
        className="col-xs-6 ml-6"
      >
         
        <i
          className="far fa-thumbs-up"
        />
      </div>
      <div
        className="col-xs-6 ml-5"
      >
        <i
          className="far fa-thumbs-down"
        />
      </div>
    </div>
  </div>
  <CustomModal
    body={
      <div>
        <section
          className="comment-modal"
        >
          <h2>
             Are you sure you want to delete this comment?
          </h2>
        </section>
        <section
          className="d-flex justify-content-center mb-5"
        >
          <ForwardRef
            className="mr-4"
            onClick={[Function]}
            sm={true}
          >
            Cancel
          </ForwardRef>
          <ForwardRef
            danger={true}
            onClick={[Function]}
            sm={true}
          >
            Delete
          </ForwardRef>
        </section>
      </div>
    }
    closeModal={[Function]}
    modalIsOpen={true}
  />
</Fragment>
`;
